Fixed HTML format from pen

--- a/index.html
+++ b/index.html
@@ -1,21 +1,35 @@
 <!-- Template for Current Time and Date-->
-<time>
- 
-  <div class="time">
-    <data class="hours">HH</data> :
-    <data class="minutes">MM</data> :
-    <data class="seconds">SS</data>
-    <data class="amOrPM">AM/PM</data> 
-  </div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <script src="script.js"></script>
+  <title>Clock</title>
+</head>
+<body>
+  
+  <time>
+    <div class="time">
+      <data class="hours">HH</data> :
+      <data class="minutes">MM</data> :
+      <data class="seconds">SS</data>
+      <data class="amOrPM">AM/PM</data> 
+    </div>
+      
+    <div class="date">
+    <data class="dayOfWeek">SMTWTFS</data> 
+    <data class="dayOfMonth">00</data>
+    </div>
     
-<div class="date">
-  <data class="dayOfWeek">SMTWTFS</data> 
-  <data class="dayOfMonth">00</data>
-</div>
+    <div class="date">
+      <data class="month">Month</data>
+      <data class="year">0000</data> 
+    </div>
   
-<div class="date">
-    <data class="month">Month</data>
-  <data class="year">0000</data> 
-</div>
-  
-</time>
+  </time>
+</body>
+</html>
+ 
